# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
data/nested/: expected_diff.txt  expected_plain_diff.txt  file1.json  file1.yml  file2.json  file2.yml
gendiff/: __init__.py  gendiff.py  json_helpers.py  yml_helpers.py
gendiff/formatters/: format_json.py  format_plain.py  format_stylish.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
